tests/back-end/fail/while_loop.t
  $ dune exec -- ../../../bin/raven.exe --shh ./while_loop.rav
  [Error] File "./while_loop.rav", line 15, columns 9-18:
  15 |   assert p[9] == 1;
                ^^^^^^^^^
  Verification Error: This assertion may be violated.
  [1]
